<resources>
    <string name="app_name" translatable="false">Tetris</string>
    <string name="score_tv" translatable="false">Score: </string>
    <string name="title_activity_start_menu" translatable="false">StartMenuActivity</string>
    <string name="start_game_button" translatable="false">Play</string>
    <string name="highscores_button" translatable="false">Highscores</string>
    <string name="switch_theme_button" translatable="false">Change Application Theme</string>
    <string name="quit_button" translatable="false">Quit</string>
    <string name="content_description_image_button" translatable="false">Image Button</string>
    <string name="imageview_content_description">Image</string>
    <string name="speed_up_button">Speed Up!</string>
    <string name="new_game_button">New Game</string>
    <string name="best_score_prefix_tv">"Best: "</string>
    <string name="pause_menu_title">PAUSE</string>
    <string name="resume_button_text">Resume</string>
    <string name="light_theme_switch">Set up dark theme</string>
    <string name="dark_theme_switch">Set up light theme</string>
    <string name="game_over_text">GAME OVER</string>
    <string name="share_result">Share</string>
    <string name="share_result_intent">Look at my new Tetris result: </string>
    <string name="app_link">https://drive.google.com/drive/folders/1PnSlosq3Kpw2NxTN8V-KmC4WdhlwXUkT</string>



</resources>
