<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOver"
    android:orientation="vertical"
    android:padding="80dp"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over_text"
        android:textSize="60sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/result_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_cup"
        android:gravity="center"/>

    <Button
        android:id="@+id/new_gama_button_game_over_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/new_game_button" />

    <Button
        android:id="@+id/share_result_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/share_result" />

</LinearLayout>