<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screens.gamescreen.TetrisGameFragment"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/score_display_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_tv" />

                <TextView
                    android:id="@+id/best_score_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_score_prefix_tv" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/score_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/best_score_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <Button
                    android:id="@+id/new_game_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_game_button"
                    android:layout_marginBottom="5dp"/>
                <ImageButton
                    android:id="@+id/pause_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/content_description_image_button"
                    android:src="?attr/pause_button_icon" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.example.tetris.screens.gamescreen.utils.TetrisFieldView
            android:id="@+id/tetrisField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/left_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="?attr/left_button_icon"
                android:contentDescription="@string/content_description_image_button"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="5dp"/>

            <ImageButton
                android:id="@+id/right_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="?attr/right_button_icon"
                android:contentDescription="@string/content_description_image_button"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="5dp"/>

            <ImageButton
                android:id="@+id/speed_up_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_image_button"
                android:src="?attr/speed_up_button_icon"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="5dp" />

            <ImageButton
                android:id="@+id/rotate_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/content_description_image_button"
                android:src="?attr/rotate_button_icon"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="0dp"/>

        </LinearLayout>

    </LinearLayout>
</layout>