<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightSchemeBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".TetrisActivity"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightSchemeButtons"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/score_display_prefix"
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_tv"
                android:textColor="@color/colorLightSchemeBackground"/>

            <TextView
                android:id="@+id/best_score_prefix"
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_score_prefix_tv"
                android:textColor="@color/colorLightSchemeBackground" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/score_display"
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightSchemeBackground" />

            <TextView
                android:id="@+id/best_score_display"
                style="@style/TextViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightSchemeBackground" />
        </LinearLayout>

        <Button
            android:id="@+id/new_game_button"
            style="@style/LightButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/pause_button"
            style="@style/LightButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/content_description_image_button"
            android:padding="5dp"
            android:src="@drawable/ic_pause_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_game_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.tetris.TetrisFieldView
        android:id="@+id/tetrisField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/left_button"
            style="@style/LightButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:src="@drawable/ic_light_left"
            android:contentDescription="@string/content_description_image_button"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="5dp"/>

        <ImageButton
            android:id="@+id/right_button"
            style="@style/LightButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:src="@drawable/ic_light_right"
            android:contentDescription="@string/content_description_image_button"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="5dp"/>

        <ImageButton
            android:id="@+id/speed_up_button"
            style="@style/LightButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:contentDescription="@string/content_description_image_button"
            android:src="@drawable/ic_light_down"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="5dp"
            />

        <ImageButton
            android:id="@+id/rotate_button"
            style="@style/LightButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:contentDescription="@string/content_description_image_button"
            android:src="@drawable/ic_rotate_light"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"/>

    </LinearLayout>

</LinearLayout>